--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '2.29.2'  # 👈 Ta version locale
 
       - name: Install dependencies
         run: flutter pub get
